--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,5 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
 psycopg2-binary==2.9.9
-gunicorn==21.2.0 
+gunicorn==21.2.0
+email-validator==2.1.0 
