Implement BuildCraftPro color palette and branding
- Add complete BuildCraftPro color system with Navy Blueprint (#15446C) and Construction Amber (#E58C30)
- Update Tailwind config with full color scales and status colors
- Implement CSS custom properties for theme-ready design
- Update all components with new brand colors:
  - Layout: Navy sidebar with orange accent highlights
  - Login/Register: Orange CTA buttons, navy headings
  - Dashboard: Brand-colored stat cards and interactive elements
  - LoadingSpinner: Orange accent animation
  - ClientModal: Consistent brand colors
- Fix logo usage: correct variants for light/dark backgrounds
- Optimize logo sizes: large login logo (h-60), prominent sidebar logo (h-36)
- Update documentation:
  - README.md: Add Brand Identity section with complete color palette
  - frontend-style.md: Add BuildCraftPro Design System guidelines
  - SETUP_GUIDE.md: Add Professional Branding section
  - Logo README: Complete branding and implementation guide
- Create professional construction industry aesthetic with consistent UX

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Environment Variables for Contractor App
+# Environment Variables for BuildCraftPro
 # Copy this file to backend/.env and update the values for your environment
 
 # Backend Configuration (place in backend/.env)
@@ -11,10 +11,10 @@ SECRET_KEY=your-secret-key-change-in-production
 
 # Database Configuration
 # For development: SQLite (file-based database)
-DATABASE_URL=sqlite:///./contractor_app.db
+DATABASE_URL=sqlite:///./buildcraftpro.db
 
 # For production: PostgreSQL (recommended)
-# DATABASE_URL=postgresql://username:password@localhost:5432/contractor_app
+# DATABASE_URL=postgresql://username:password@localhost:5432/buildcraftpro
 
 # Optional: CORS origins (comma-separated list)
 # Uncomment and modify if you need specific CORS settings
