--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "pre-commit": "npm run type-check && npm run lint",
-    "prepare": "cd .. && husky install"
+    "prepare": "cd .. && (husky install 2>/dev/null || true)"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
