fix: Update API URL to correct domain (api.buildcraft.com)

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,6 @@
     }
   ],
   "env": {
-    "VITE_API_URL": "https://api.buildcraftpro.com/api"
+    "VITE_API_URL": "https://api.buildcraft.com/api"
   }
 } 
