--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!api|images|_next/static|_next/image|favicon.ico).*)",
       "destination": "/index.html"
     }
   ]
