fix: Use better vercel.json rewrite pattern to exclude static files with extensions

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/((?!api|images|_next/static|_next/image|favicon.ico).*)",
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
     }
   ]
