--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,12 @@
+[variables]
+NIXPACKS_PYTHON_VERSION = "3.12"
+
+[phases.setup]
+dependsOn = []
+
+[phases.install]
+dependsOn = ["setup"]
+cmds = ["cd backend && python -m venv --copies /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt"]
+
 [start]
-cmd = "cd backend && bash -c 'source /opt/venv/bin/activate && alembic upgrade head && gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT'"
+cmd = "cd backend && PATH=/opt/venv/bin:$PATH alembic upgrade head && PATH=/opt/venv/bin:$PATH gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT"
