--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,7 +6,7 @@ dependsOn = []
 
 [phases.install]
 dependsOn = ["setup"]
-cmds = ["cd backend && python -m venv --copies /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt"]
+cmds = ["cd backend && python3 -m venv --copies /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt"]
 
 [start]
 cmd = "cd backend && PATH=/opt/venv/bin:$PATH alembic upgrade head && PATH=/opt/venv/bin:$PATH gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT"
